# tokenbench

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  RESEARCH.md  V1_PLAN.md  pyproject.toml
.claude/: settings.json
contexts/: lean-costly.md  lean.md  verbose.md
contexts/statistics/: lean-costly.md  lean.md  verbose.md
fixtures/inflection/: PINNED.txt
fixtures/statistics/: PINNED.txt
results/judge-calibration/: calibration.jsonl
results/v0-explain-cap/: runs.jsonl
results/v0-summarize-terse/: runs.jsonl
results/v1-explain/: runs.jsonl
results/v1-explain-judged/: runs.jsonl
results/v1-list-api/: runs.jsonl
results/v1-list-api-judged/: runs.jsonl
results/v1-summarize/: runs.jsonl
results/v1-summarize-judged/: runs.jsonl
results/v2-context-costly-judged/: runs.jsonl
results/v2-context-costly-judged-pairwise/: pairwise.jsonl
results/v2-context-decompose/: runs.jsonl
results/v2-context-decompose-judged/: runs.jsonl
results/v2-context-decompose-statistics-judged/: runs.jsonl
results/v2-context-decompose-statistics-judged-pairwise/: pairwise-lean-vs-lean-costly.jsonl  pairwise-verbose-vs-lean-costly.jsonl  pairwise.jsonl
tests/: test_anchor.py  test_calibration.py  test_generalization.py  test_pairwise_robustness.py  test_pricing.py  test_quality.py  test_results_locator.py  test_runner_parse.py  test_stats.py  test_tier1_stats.py  test_tier2_cache.py  test_tier3_diagnostics.py  test_v2_context.py
tokenbench/: __init__.py  _stub_claude.py  anchor.py  calibration.py  cli.py  experiment.py  quality.py  runner.py  stats.py
(+9 files in other folders)
