[project]
name = "tokenbench"
version = "0.0.0"
description = "Controlled A/B harness for measuring Claude Code token-reduction techniques."
requires-python = ">=3.11"
# Runtime is stdlib-only on purpose: this project measures token efficiency, so it
# must not become the bloat. No runtime dependencies.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tokenbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
